<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projekt_inz.ui.home.CalendarFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_plan"
        android:name="com.example.projekt_inz.ui.plan.PlanFragment"
        android:label="@string/menu_plan"
        tools:layout="@layout/fragment_plan" />
    <fragment
        android:id="@+id/nav_todolist"
        android:name="com.example.projekt_inz.ui.todolist.ToDoFragment"
        android:label="@string/menu_todolist"
        tools:layout="@layout/fragment_todo" />
    <fragment
        android:id="@+id/nav_routines"
        android:name="com.example.projekt_inz.ui.routines.RoutinesFragment"
        android:label="@string/menu_routines"
        tools:layout="@layout/fragment_main_list">

    <action
        android:id="@+id/actionMainListFragmentToTodoListFragment"
        app:destination="@id/todoListFragment" />
</fragment>
    <fragment
        android:id="@+id/todoListFragment"
        android:name="com.example.projekt_inz.ui.routines.routine_list.TodoListFragment"
        tools:layout="@layout/fragment_todo_list">

        <argument
            android:name="listId"
            app:argType="long" />
        <argument
            android:name="listName"
            app:argType="string" />
    </fragment>
</navigation>